fix: add truncation to postcard extract

--- a/components/PostCard/PostCard.module.css
+++ b/components/PostCard/PostCard.module.css
@@ -17,6 +17,11 @@
 }
 
 .postDetails > a p {
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+   overflow: hidden; 
+
     font-family: var(--font-primary);
     font-size: clamp(1.2rem, 1.5vw, 3rem);
 }
